@@ -158,6 +158,17 @@ public:
 
     /** Relayout the tool option docker. */
     void relayoutDocker(bool wide);
+
+    /**
+     * \ingroup UI
+     * Tests for text values in the selection cursor's column, that are
+     * different to the one at the selection cursor.
+     * Used to create a popup menu consisting of text values to choose from.
+     * \param selection the selection of cells to work on
+     * \return \c true if there are text values in the selection cursor's column
+     */
+    bool testListChoose(Selection *selection) const;
+
 private:
     CellToolBase* q;
 };
